<resources>
    <string name="app_name">IspitAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="surname">Surname</string>
    <string name="oib">OIB</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="cities">Cities</string>
    <string name="save_data">SAVE DATA</string>
</resources>
